# eduMFA

./: .codespell_skip  .codespellignore  .dockerignore  .git-blame-ignore-revs  .gitignore  .readthedocs.yaml  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  README.rst  READ_BEFORE_UPDATE.md  SECURITY.md  crowdin.yml  edumfa-manage  package-lock.json  package.json  pyproject.toml  renovate.json  requirements-hsm.txt  requirements-kerberos.txt  requirements-test.txt  requirements.txt  setup.py
.github/: filters.yml
.github/ISSUE_TEMPLATE/: 1-bug_report.md  2-feature_request.md  3-idea.md
.github/workflows/: bandit.yml  build.yml  codeql.yml  codespell.yml  docker.yml  docs.yml  frontend.yml  greetings.yml  lint.yml  publish.yml  pypi.yml  python-dist.yml  python.yml  release.yml  reviewdog.yml  test.yml  translations.yml  ubuntu.yml
deploy/: README.md  docker-compose-example.yml  docker-setup.sh  edumfa_radius.pm  logging.cfg  rlm_perl.ini
deploy/crontab/: edumfa
deploy/docker/: edumfa.py  edumfa_config.py  entrypoint.sh  logging.cfg  logging.yml
deploy/docker-example/: admin_password.txt  docker-compose.yml  edumfa-policy.conf  edumfa-setup.sh  edumfa.cfg  env-example  example-policy.py  my-login.html
deploy/edumfa/: edumfa.cfg  openssl.cnf
deploy/nginx/: edumfaapp.py
deploy/ubuntu/: changelog  control  rules
deploy/ubuntu-radius/: changelog  control  edumfa-radius.install  edumfa-radius.postinst  edumfa-radius.postrm  rules
deploy/ubuntu-server/: changelog  clean  control  edumfa-apache2.install  edumfa-apache2.postinst  edumfa-apache2.postrm  edumfa-nginx.install  edumfa-nginx.postinst  edumfa-nginx.postrm  privacyidea-apache2.install  privacyidea-apache2.postinst  privacyidea-mysql.install  privacyidea-mysql.postinst  privacyidea-nginx.postinst  privacyidea-nginx.postrm  rules
doc/: Makefile  changelog.rst  conf.py  index.rst  migration.rst  requirements.txt  spelling_wordlist.txt
doc/audit/: index.rst
doc/configuration/: caconnectors.rst  edumfaserver_config.rst  index.rst  privacyidea-appliance.rst  privacyideaserver_config.rst  radiusserver_config.rst  realms.rst  serviceids.rst  sms_gateway_config.rst  smtpserver_config.rst  system_config.rst  token_config.rst  useridresolvers.rst
doc/eventhandler/: counterhandler.rst  federationhandler.rst  index.rst  logginghandler.rst  requestmangler.rst  responsemangler.rst  scripthandler.rst  tokenhandler.rst  usernotification.rst
doc/faq/: admins.rst  brute-force.rst  creating-users.rst  crypto-considerations.rst  customization.rst  high-availability.rst  migration-strategies.rst  mysqldb.rst  performance.rst  policies.rst  re-encryption.rst  rollout-strategies.rst  shortcuts.rst  time.rst  tokenview.rst  translation.rst
doc/firststeps/: add_admin.rst  index.rst  login.rst  realm.rst  token.rst
doc/glossary/: index.rst
doc/installation/: centos.rst  database.rst  docker.rst  helm.rst  index.rst  pip.rst  ubuntu.rst  upgrade.rst
doc/integrations/: freeradius.rst  index.rst  ldap_proxy.rst  openvpn.rst  shibboleth.rst
doc/jobqueue/: index.rst
doc/machines/: index.rst
doc/modules/: api.rst  audit.rst  db.rst  index.rst  lib.rst  machineresolvers.rst  monitoring.rst  pinhandler.rst  useridresolvers.rst
doc/overview/: index.rst
doc/periodictask/: eventcounter.rst  index.rst
doc/policies/: admin.rst  authentication.rst  authorization.rst  conditions.rst  enrollment.rst  index.rst  register.rst  user.rst  webui.rst
doc/tokens/: authentication_modes.rst  index.rst  supported_tokens.rst  tokentypes.rst
doc/webui/: index.rst  manage_users.rst  user_attributes.rst
doc/workflows_and_tools/: enrollment_tools.rst
edumfa/: __init__.py  app.py  config.py  messages.pot  models.py
edumfa/api/: audit.py  (+28 more)
locale/: af_ZA.po  ar_SA.po  ca_ES.po  cs_CZ.po  da_DK.po  de_DE.po  el_GR.po  en_US.po  es_ES.po  fi_FI.po  fr_FR.po  he_IL.po  hu_HU.po  it_IT.po  ja_JP.po  ko_KR.po  nl_NL.po  no_NO.po  pl_PL.po  pt_BR.po  pt_PT.po  ro_RO.po  ru_RU.po  sr_Cyrl.po  sr_SP.po  sv_SE.po  tr_TR.po  uk_UA.po  vi_VN.po  zh_CN.po  zh_TW.po
migrations/: alembic.ini  env.py
po/: cs.po  de.po  es.po  fr.po  hu.po  it.po  mn.po  nb_NO.po  nl.po  pl.po  pt_BR.po  ro.po  ru.po  si.po  template.pot  tr.po  uk.po  zh_Hans.po  zh_Hant.po
tests/: base.py  ldap3mock.py  mscamock.py  pkcs11mock.py  queuemock.py  radiusmock.py  redismock.py  requirements.txt  smppmock.py  smtpmock.py  test_api_2stepinit.py  test_api_applications.py  test_api_audit.py  test_api_auth.py  test_api_caconnector.py  test_api_clienttype.py  test_api_edumfaserver.py  test_api_events.py  test_api_health.py  test_api_lib_policy.py  test_api_lib_utils.py  test_api_machineresolver.py  test_api_machines.py  test_api_machines_serviceid.py  test_api_monitoring.py  test_api_offline_no_token.py  test_api_periodictask.py  test_api_policy.py  test_api_push_validate.py  test_api_radiusserver.py  test_api_register.py  test_api_roles.py  test_api_serviceids.py  test_api_smsgateway.py  test_api_smtpserver.py  test_api_system.py  test_api_token.py  test_api_tokengroup.py  test_api_ttype.py  test_api_u2f.py  (+85 more)
tools/: creategoogleauthenticator-file  edumfa-authorizedkeys  edumfa-convert-base32.py  edumfa-convert-token.1  edumfa-create-ad-users  edumfa-create-ad-users.1  edumfa-create-certificate  edumfa-create-certificate.1  edumfa-create-pwidresolver-user  edumfa-create-pwidresolver-user.1  edumfa-create-sqlidresolver-user  edumfa-create-sqlidresolver-user.1  edumfa-create-userdb  edumfa-create-userdb.1  edumfa-cron  edumfa-diag  edumfa-expired-users  edumfa-export-edumfa-counter.py  edumfa-export-linotp-counter.py  edumfa-fetchssh  edumfa-fetchssh.1  edumfa-fix-access-rights  edumfa-fix-access-rights.1  edumfa-get-serial  edumfa-get-unused-tokens  edumfa-migrate-linotp.py  edumfa-pip-update  edumfa-pip-update.1  edumfa-queue-huey  edumfa-schema-upgrade  edumfa-standalone  edumfa-sync-owncloud.py  edumfa-token-janitor  edumfa-update-counter.py  edumfa-update-linotp-counter.py  edumfa-user-action  edumfa-usercache-cleanup  getgooglecodes  reset-edumfa  ssha.py
(+613 files in other folders)
