[build-system]
requires = ["setuptools>=77.0.3"]  # Minimum for new license field
build-backend = "setuptools.build_meta"

[project]
name = "edumfa"
version = "2.8.0"
requires-python = ">=3.9,<3.14"
authors = [{ name = "edumfa.io", email = "edumfa@listserv.dfn.de" }]
description = "eduMFA: identity, multifactor authentication (OTP), authorization, audit"
readme = { file = "README.rst", content-type = "text/x-rst" }
license = "AGPL-3.0-only"
keywords = ["OTP", "two factor authentication", "management", "security"]
classifiers = [
    "Framework :: Flask",
    "Programming Language :: Python",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Internet",
    "Topic :: Security",
    "Topic :: System :: Systems Administration :: Authentication/Directory",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "flask-babel==4.0.0",
    "Flask-Migrate==4.1.0",
    "Flask-SQLAlchemy==3.1.1",
    "Flask-Versioned==0.9.4-20101221",
    "Flask==3.1.2",
    "PyJWT==2.10.1",
    "PyMySQL==1.1.2",
    "PyYAML==6.0.2",
    "SQLAlchemy==2.0.43",
    "argon2-cffi==25.1.0",
    "beautifulsoup4[lxml]==4.13.5",
    "cbor2==5.7.0",
    "configobj==5.0.9",
    "croniter==6.0.0",
    "cryptography==45.0.7",
    "defusedxml==0.7.1",
    "google-auth==2.40.3",
    "grpcio==1.74.0",
    "huey[redis]==2.5.3",
    "importlib_metadata==8.7.0",
    "ldap3==2.9.1",
    "lxml==6.0.1",
    "netaddr==1.3.0",
    "passlib[bcrypt]==1.7.4",
    "pyOpenSSL==25.1.0",
    "pydash==8.0.5",
    "pyrad==2.4",
    "python-dateutil==2.9.0.post0",
    "python-gnupg==0.5.5",
    "requests==2.32.5",
    "segno==1.6.6",
    "smpplib==2.2.4",
    "typing-extensions==4.15.0",
    "pyasn1==0.6.1",
    "urllib3==2.5.0",
    "crypt-r==3.13.1; python_version >= '3.13' and sys_platform == 'linux'",
]

[project.urls]
Homepage = "https://edumfa.io/"
Documentation = "https://edumfa.readthedocs.io/"
Repository = "https://github.com/eduMFA/eduMFA.git"
Issues = "https://github.com/eduMFA/eduMFA/issues"

[project.optional-dependencies]
docs = [
    "furo==2025.7.19",
    "docutils==0.21.2",
    "imagesize==1.4.1",
    "packaging==25.0",
    "pyenchant==3.2.2",
    "Pygments==2.19.2",
    "snowballstemmer==3.0.1",
    "Sphinx==8.2.3; python_version >= '3.11'",
    "sphinxcontrib-applehelp==2.0.0",
    "sphinxcontrib-devhelp==2.0.0",
    "sphinxcontrib-htmlhelp==2.1.0",
    "sphinxcontrib-httpdomain==1.8.1",
    "sphinxcontrib-jsmath==1.0.1",
    "sphinxcontrib-qthelp==2.0.0",
    "sphinxcontrib-serializinghtml==2.0.0",
    "sphinxcontrib-spelling==8.0.1; python_version >= '3.10'",
    "sphinx-copybutton==0.5.2",
    "sphinx-inline-tabs==2023.4.21",
]
test = [
    "attrs==25.3.0",
    "coverage==7.10.5",
    "exceptiongroup==1.3.0",
    "iniconfig==2.1.0",
    "mock==5.2.0",
    "packaging==25.0",
    "pluggy==1.6.0",
    "pyparsing==3.2.3",
    "pytest==8.4.1",
    "pytest-cov==6.3.0",
    "responses==0.25.8",
    "testfixtures==8.3.0",
    "tomli==2.2.1",
    "types-PyYAML==6.0.12.20250822",
]
postgres = ["psycopg2==2.9.10"]
hsm = ["PyKCS11==1.5.18"]
kerberos = ["gssapi==1.10.0"]
grpc = [
    "protobuf==6.32.0",
    "google==3.0.0",
]

[project.scripts]
edumfa-manage = "edumfa.commands.manage.main:cli"

[tool.setuptools.packages.find]
include = ["edumfa*"]

[tool.setuptools.package-data]
"edumfa" = ["translations/**/*", "static/**/*"]
