[build-system]
requires = ["setuptools>=77.0.3"]  # Minimum for new license field
build-backend = "setuptools.build_meta"

[project]
name = "edumfa"
version = "2.9.0a"
requires-python = ">=3.10,<3.15"
authors = [{ name = "edumfa.io", email = "edumfa@listserv.dfn.de" }]
description = "eduMFA: identity, multifactor authentication (OTP), authorization, audit"
readme = { file = "README.rst", content-type = "text/x-rst" }
license = "AGPL-3.0-only"
keywords = ["OTP", "two factor authentication", "management", "security"]
classifiers = [
    "Framework :: Flask",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Internet",
    "Topic :: Security",
    "Topic :: System :: Systems Administration :: Authentication/Directory",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "alembic==1.18.3",
    "babel==2.17.0",
    "beautifulsoup4==4.14.3",
    "cbor2==5.8.0",
    "click==8.3.1",
    "configobj==5.0.9",
    "croniter==6.0.0",
    "cryptography==46.0.3",
    "defusedxml==0.7.1",
    "flask==3.1.2",
    "flask-babel==4.0.0",
    "flask-migrate==4.1.0",
    "flask-sqlalchemy==3.1.1",
    "google-auth==2.47.0",
    "grpcio==1.76.0",
    "huey==2.6.0",
    "importlib-metadata==8.7.0",
    "jinja2==3.1.6",
    "ldap3==2.10.2rc3",
    "lxml==6.0.2",
    "netaddr==1.3.0",
    "passlib==1.7.4",
    "pydash==8.0.5",
    "pyjwt==2.10.1",
    "pymysql==1.1.2",
    "pyopenssl==25.3.0",
    "pyrad==2.4",
    "python-dateutil==2.9.0.post0",
    "python-gnupg==0.5.6",
    "requests==2.32.5",
    "segno==1.6.6",
    "smpplib==2.2.4",
    "sqlalchemy==2.0.45",
    "werkzeug==3.1.5",
]

[project.urls]
Homepage = "https://edumfa.io/"
Documentation = "https://edumfa.readthedocs.io/"
Repository = "https://github.com/eduMFA/eduMFA.git"
Issues = "https://github.com/eduMFA/eduMFA/issues"

[project.optional-dependencies]
postgres = ["psycopg2==2.9.11"]
hsm = ["PyKCS11==1.5.18"]
kerberos = ["gssapi==1.10.1"]
grpc = [
    "protobuf==6.33.4",
    "google==3.0.0",
]

[project.scripts]
edumfa-manage = "edumfa.commands.manage.main:cli"

[dependency-groups]
dev = [
    {include-group = "lint"},
    {include-group = "docs"},
    {include-group = "test"},
]
lint = ["ruff==0.15.0"]
docs = [
    "furo==2025.12.19",
    "docutils==0.21.2",
    "imagesize==1.4.1",
    "packaging==25.0",
    "pyenchant==3.3.0",
    "Pygments==2.19.2",
    "snowballstemmer==3.0.1",
    "Sphinx==9.0.4; python_version >= '3.11'",
    "sphinxcontrib-applehelp==2.0.0",
    "sphinxcontrib-devhelp==2.0.0",
    "sphinxcontrib-htmlhelp==2.1.0",
    "sphinxcontrib-httpdomain==1.8.1",
    "sphinxcontrib-jsmath==1.0.1",
    "sphinxcontrib-qthelp==2.0.0",
    "sphinxcontrib-serializinghtml==2.0.0",
    "sphinxcontrib-spelling==8.0.2; python_version >= '3.10'",
    "sphinx-copybutton==0.5.2",
    "sphinx-inline-tabs==2025.12.21.14",
]
test = [
    "attrs==25.4.0",
    "coverage==7.13.1",
    "exceptiongroup==1.3.1",
    "iniconfig==2.3.0",
    "mock==5.2.0",
    "packaging==25.0",
    "pluggy==1.6.0",
    "pyparsing==3.3.1",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "pytest-github-actions-annotate-failures==0.3.0",
    "responses==0.25.8",
    "testfixtures==8.3.0",
    "tomli==2.4.0",
    "types-PyYAML==6.0.12.20250915",
]

[tool.setuptools.packages.find]
include = ["edumfa*"]

[tool.setuptools.package-data]
"edumfa" = ["translations/**/*", "static/**/*"]

[tool.ruff]
extend-include = [
    "edumfa-manage",
    "tools/creategoogleauthenticator-file",
    "tools/edumfa-create-ad-users",
    "tools/edumfa-create-certificate",
    "tools/edumfa-create-pwidresolver-user",
    "tools/edumfa-create-sqlidresolver-user",
    "tools/edumfa-cron",
    "tools/edumfa-expired-users",
    "tools/edumfa-fix-access-rights",
    "tools/edumfa-get-serial",
    "tools/edumfa-get-unused-tokens",
    "tools/edumfa-pip-update",
    "tools/edumfa-queue-huey",
    "tools/edumfa-standalone",
    "tools/edumfa-token-janitor",
    "tools/edumfa-user-action",
    "tools/edumfa-usercache-cleanup",
    "tools/getgooglecodes"
]

[tool.ruff.lint]
select = [
    "I", # Isort
    "UP", # Pyupgrade
]

[tool.ruff.lint.per-file-ignores]
"tests/test_lib_crypto.py" = ["I001"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.codespell]
skip = "./edumfa/static/components/translation,./edumfa/static/contrib,./edumfa/static/translations,./edumfa/static/bun.lock,./edumfa/translations,./tests/testdata/enckey,*.pem,./AUTHORS.md"
ignore-words = ".codespellignore"
